// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withFunctionFetch Wrapped Component renders the wrapped component adn forward props 1`] = `
<DummyWithFetchDataComponent
  fetch={[Function]}
  loading={false}
  sommething="ok"
/>
`;

exports[`withFunctionFetch fetch behaviours forwards data when failure 1`] = `
<div>
  Error: 
  data error
</div>
`;

exports[`withFunctionFetch fetch behaviours forwards data when success 1`] = `
<div>
  Some data passed: 
  Sponge bob is alive
</div>
`;

exports[`withFunctionFetch fetch behaviours forwards loading on fetch 1`] = `
<div>
  Loading
</div>
`;
